css font fam update

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ background-color:#e0e0e0;
 }
 /* element modifications */
 body{
-   font-family: arial, serif;
+   font-family: Cambria, arial, serif;
    margin: 5em 10em;
 }
 li{
